# second-brain

./: .gitignore
Second Mind - Advance - Script Version/: .env.example  CHANGELOG.md  README.md  pyproject.toml
Second Mind - Advance - Script Version/docs/: OBSIDIAN.md  PIPELINES.md  TAGGING.md  WORKFLOW.md  env.md
Second Mind - Advance - Script Version/logs/staged/: blogs_example_article.md__blog.bundle.txt  inbox_example_capture.md__general.bundle.txt  research_papers_README.txt__paper.bundle.txt  youtube_example_video.md__youtube.bundle.txt
Second Mind - Advance - Script Version/prompts/: blog_article.md  general_ingestion.md  refine.md  research_paper.md  split.md  youtube.md
Second Mind - Advance - Script Version/raw/blogs/: example_article.md
Second Mind - Advance - Script Version/raw/inbox/: example_capture.md
Second Mind - Advance - Script Version/raw/research_papers/: README.txt
Second Mind - Advance - Script Version/raw/youtube/: example_video.md
Second Mind - Advance - Script Version/scripts/: __init__.py  __main__.py  cli.py  config.py  dedup.py  discover.py  ingest.py  insights.py  logging_utils.py  paths.py  pdf_extract.py  prompts.py  refine.py  routing.py  wikilinks.py
Second Mind - Advance - Script Version/tests/: test_ingest.py  test_insights_order.py  test_wikilinks.py  test_wikilinks_placeholders.py
Second Mind - Advance - Script Version/wiki/.obsidian/: workspace.json
Second Mind Universal LLM IDE with UI/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  start-graph.sh
(+43 files in other folders)
